# epaper-display-panel

./: .gitignore  README.md  config.yaml  panel.service  pyproject.toml  service.py
mechanics/: README.md  adapter-mount.stl  back.stl  front.stl  mount.stl  panel-clamp.stl  panel.step  pi-mount-a.stl  pi-mount-b.stl  switch-mount-a.stl  switch-mount-b.stl  switch.stl
waveshare_epd/: epd7in5_V2.py  epdconfig.py
